# seeg-parser

./: LICENSE  README.md  pyproject.toml  tutorial.md
docs/: TUTORIAL.md
example/: channels.json  example.py
seeg-parser/: __init__.py  inspection.py  parse.py
seeg_parser/: __init__.py  core.py  montage.py
